one More Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,21 @@
 **/*.DS_Store
+**/.DS_Store
 
 **/*node_modules
 **/node_modules
 
 **/*.pnp
 **/*.pnp.js
+**/.pnp
+**/.pnp.js
 
 # testing
 **/*coverage
+**/coverage
 
 # production
 **/*build
+**/build
 
 # misc
 .DS_Store
